--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-  "functions": {
-    "app.py": {
-      "runtime": "python3.9",
-      "maxDuration": 60
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
